fix to schedules
